--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_NEWSAPIKEY=028817360d294300ad184fc73e045041
 REACT_APP_RAPIDAPIKEY=3dc94dc6a1msh5ebf23a6173aa3cp17bf80jsndd043db47af0
 REACT_APP_FACTSAPIKEY=3dc94dc6a1msh5ebf23a6173aa3cp17bf80jsndd043db47af0
 REACT_APP_OPENWEATHERAPIKEY=10f631f7fa5f1ad67e9d3dc0d9d7f74b
+REACT_APP_NASAAPIKEY=ApW4JiPddgnWqUIJTLu0EBUDaQrf3wWsbyUZiZQM
